- change: When creating a new database, the new files are automatically saved.
- add: New import plugin, import GCComments
- add: Cache list now contains a Coordinate column
- change: Geometry interface, added getting areas if location is within envelop of area
- change: Select geocaches within a region, now has option to select geocaches within envelop of region/area

V1.9.6.0

- fix: LiveAPI, log geocache using geocache_visits.txt now logs the geocaches ordered by time
- add: Export to c:geo plugin added. Copy to .cgeo on the phone and perform a database recovery to import the data
- fix: Shapefile, changed text decoding to get the correct names
- fix: Internal browser, creating pocket series of queries
- fix: Internal browser, deleting automatically created series of pocket queries
- change: FormulaSolver: German help, new screenshot number functions
- add: Search plugin, option to select geocaches that are or are not available in another gpp database

V1.9.5.0

- change: French language updated (thanks icaunais and RHCV)
- change: Language maintenance improvement. The complete XML will be saved if changes are made and is sorted for easier merging.
- add: Internal web browser, option to paste project-gc pq slitter result in pq series generator
- add: Formula Solver, added functions Latitude and Longitude
- add: LiveAPI, Log geocache now has the option to rotate images
- add: Help added to the GAPP framework
- add: Help implemented for Formula Solver (German and Dutch)
- fix: GSAK database import, now imports also database where LiveAPI columns are missing

V1.9.4.0

- add: OKAPI, Import geocaches within radius
- add: OKAPI, Authorization added. This will add features to be implemented that requires Authentication level 3
- fix: LiveAPI, Import geocaches when not PM now skips PM filters
- add: option to hide the OKAPI menu
- add: Formula Solver plugin (by superudo)
- add: Main screen, added Formula solver to the taskbar

V1.9.3.0
